--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "potigol-transpiler-to",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
     "dev": "jest",
+    "editor": "export NODE_ENV=development && webpack-dev-server --inline --open --mode=development",
     "test": "npm run dev -- --coverage"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "David Costa <davidcostadev@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^5.10.0",
@@ -16,8 +17,12 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "expect": "^23.6.0"
